--- a/ExClient/ExClient.csproj
+++ b/ExClient/ExClient.csproj
@@ -123,11 +123,15 @@
     <PRIResource Include="Strings\zh-hans\Namespace.resjson" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Api\ApiContracts.cs" />
+    <Compile Include="Api\Rating.cs" />
     <Compile Include="Api\Tagging.cs" />
     <Compile Include="Api\VoteState.cs" />
     <Compile Include="Galleries\Metadata\LanguageModifier.cs" />
     <Compile Include="Galleries\Metadata\LanguageName.cs" />
     <Compile Include="Galleries\Metadata\LanguageNameExtension.cs" />
+    <Compile Include="Galleries\Rating\RatingHelper.cs" />
+    <Compile Include="Galleries\Rating\Score.cs" />
     <Compile Include="Hentaiverse\HentaiVerseInfo.cs" />
     <Compile Include="Hentaiverse\MonsterEncounteredEventArgs.cs" />
     <Compile Include="Migrations\20170612052132_NewMig.cs" />
