--- a/ExClient/project.json
+++ b/ExClient/project.json
@@ -1,6 +1,6 @@
 ﻿{
   "dependencies": {
-    "HtmlAgilityPack": "1.5.0-beta92",
+    "HtmlAgilityPack": "1.5.0",
     "Microsoft.EntityFrameworkCore.Sqlite": "1.1.2",
     "Microsoft.EntityFrameworkCore.Tools": "1.1.1",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.3",
