--- a/ExViewer/project.json
+++ b/ExViewer/project.json
@@ -1,14 +1,14 @@
 ﻿{
   "dependencies": {
     "HockeySDK.UWP": "4.1.6",
-    "HtmlAgilityPack": "1.5.0-beta92",
+    "HtmlAgilityPack": "1.5.0",
     "JyAnalytics": "1.0.10",
     "Microsoft.Azure.Mobile.Analytics": "0.13.1",
     "Microsoft.EntityFrameworkCore.Sqlite": "1.1.2",
     "Microsoft.EntityFrameworkCore.Tools": "1.1.1",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.3",
     "Microsoft.Toolkit.Uwp.UI.Controls": "1.4.1",
-    "Opportunity.Converters": "1.1.0",
+    "Opportunity.Converters": "1.2.1",
     "Opportunity.MvvmUniverse": "0.3.2",
     "Opportunity.ResourceGenerator": "1.1.5"
   },
