--- a/ExViewer/ExViewer.csproj
+++ b/ExViewer/ExViewer.csproj
@@ -110,6 +110,9 @@
     <Compile Include="Controls\CommentViewer.xaml.cs">
       <DependentUpon>CommentViewer.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Controls\CoverPresenter.xaml.cs">
+      <DependentUpon>CoverPresenter.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\FavoriteCategoryPresenter.cs" />
     <Compile Include="Controls\ExcludedTagNamespacesSelector.xaml.cs">
       <DependentUpon>ExcludedTagNamespacesSelector.xaml</DependentUpon>
@@ -320,6 +323,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Page>
+    <Page Include="Controls\CoverPresenter.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Controls\ExcludedTagNamespacesSelector.xaml">
       <Generator>MSBuild:Compile</Generator>
