fix focus again
Former-commit-id: 92a971d8c58aa984f12ca3dc06718bdb19067a54 [formerly 0afd825dc9c70613fdda579b91cf3543d2fac8f8]
Former-commit-id: 281baf38fb1b384e8a2ef97f089c8ca94436abab

--- a/ExViewer/ExViewer.csproj
+++ b/ExViewer/ExViewer.csproj
@@ -158,6 +158,7 @@
     <Compile Include="Helpers\ExceptionHandler.cs" />
     <Compile Include="Helpers\ShareHandler.cs" />
     <Compile Include="Helpers\TagExtension.cs" />
+    <Compile Include="Helpers\ViewHelper.cs" />
     <Compile Include="Migrations\20170327142247_MigrationReset.cs" />
     <Compile Include="Migrations\20170327142247_MigrationReset.designer.cs">
       <DependentUpon>20170327142247_MigrationReset.cs</DependentUpon>
