--- a/ExClient/ExClient.csproj
+++ b/ExClient/ExClient.csproj
@@ -219,10 +219,12 @@
     <Compile Include="Tagging\TagCollection.cs" />
     <Compile Include="Galleries\Metadata\TorrentInfo.cs" />
     <Compile Include="Launch\UriLauncher.cs" />
+    <Compile Include="Status\TaggingRecord.cs" />
+    <Compile Include="Status\TaggingStatistics.cs" />
     <Compile Include="Tagging\TagState.cs" />
     <Compile Include="TopList.cs" />
-    <Compile Include="UserInfo.cs" />
-    <Compile Include="UserStatus.cs" />
+    <Compile Include="Status\UserInfo.cs" />
+    <Compile Include="Status\UserStatus.cs" />
     <Content Include="Properties\ExClient.rd.xml" />
     <PRIResource Include="Strings\en\Namespace.resjson" />
     <PRIResource Include="Strings\en\Category.resjson" />
