--- a/EhTagTranslatorClient/project.json
+++ b/EhTagTranslatorClient/project.json
@@ -3,7 +3,13 @@
     "HtmlAgilityPack": "1.5.1",
     "Microsoft.EntityFrameworkCore.Sqlite": "1.1.2",
     "Microsoft.EntityFrameworkCore.Tools": "1.1.1",
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.4.0"
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.4.0",
+    "Microsoft.Win32.Primitives": "4.3.0",
+    "System.Diagnostics.Contracts": "4.3.0",
+    "System.Net.NameResolution": "4.3.0",
+    "System.Runtime.WindowsRuntime.UI.Xaml": "4.3.0",
+    "System.Threading.Overlapped": "4.3.0",
+    "System.ValueTuple": "4.4.0"
   },
   "frameworks": {
     "uap10.0.14393": {}
