--- a/ExClient/project.json
+++ b/ExClient/project.json
@@ -4,9 +4,14 @@
     "Microsoft.EntityFrameworkCore.Sqlite": "1.1.2",
     "Microsoft.EntityFrameworkCore.Tools": "1.1.1",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.4.0",
+    "Microsoft.Win32.Primitives": "4.3.0",
     "Newtonsoft.Json": "10.0.3",
     "Opportunity.MvvmUniverse": "0.3.7",
     "Opportunity.ResourceGenerator": "1.1.5",
+    "System.Diagnostics.Contracts": "4.3.0",
+    "System.Net.NameResolution": "4.3.0",
+    "System.Runtime.WindowsRuntime.UI.Xaml": "4.3.0",
+    "System.Threading.Overlapped": "4.3.0",
     "System.ValueTuple": "4.4.0"
   },
   "frameworks": {
