--- a/ExViewer/project.json
+++ b/ExViewer/project.json
@@ -8,9 +8,15 @@
     "Microsoft.EntityFrameworkCore.Tools": "1.1.1",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.4.0",
     "Microsoft.Toolkit.Uwp.UI.Controls": "1.5.1",
+    "Microsoft.Win32.Primitives": "4.3.0",
     "Opportunity.Converters": "1.2.2",
     "Opportunity.MvvmUniverse": "0.3.7",
-    "Opportunity.ResourceGenerator": "1.1.5"
+    "Opportunity.ResourceGenerator": "1.1.5",
+    "System.Diagnostics.Contracts": "4.3.0",
+    "System.Net.NameResolution": "4.3.0",
+    "System.Runtime.WindowsRuntime.UI.Xaml": "4.3.0",
+    "System.Threading.Overlapped": "4.3.0",
+    "System.ValueTuple": "4.4.0"
   },
   "frameworks": {
     "uap10.0.14393": {}
