--- a/ExViewer/project.json
+++ b/ExViewer/project.json
@@ -4,13 +4,14 @@
     "HtmlAgilityPack": "1.5.1",
     "JyAnalytics": "1.0.10",
     "Microsoft.Azure.Mobile.Analytics": "0.14.2",
+    "Microsoft.Azure.Mobile.Crashes": "0.14.2",
     "Microsoft.EntityFrameworkCore.Sqlite": "1.1.2",
     "Microsoft.EntityFrameworkCore.Tools": "1.1.1",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.4.0",
     "Microsoft.Toolkit.Uwp.UI.Controls": "1.5.1",
     "Microsoft.Win32.Primitives": "4.3.0",
     "Opportunity.Converters": "1.2.2",
-    "Opportunity.MvvmUniverse": "0.4.4",
+    "Opportunity.MvvmUniverse": "0.4.5",
     "Opportunity.ResourceGenerator": "1.1.6",
     "System.Diagnostics.Contracts": "4.3.0",
     "System.Net.NameResolution": "4.3.0",
