add info page; remove my wrappanel
Former-commit-id: c0da2d817b3b7c578048c7d4885be37266796d5c [formerly 18bfdb58fc52b26fda72d26c76651c7a694d3c42]
Former-commit-id: 38e44c79dc4bf50f24b4a6773b55c817b5bfc63a

--- a/ExViewer/ExViewer.csproj
+++ b/ExViewer/ExViewer.csproj
@@ -134,7 +134,6 @@
     <Compile Include="Controls\TagPresenter.xaml.cs">
       <DependentUpon>TagPresenter.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Controls\WrapPanel.cs" />
     <Compile Include="Helpers\AccountManager.cs" />
     <Compile Include="Converters\FormatStringConverter.cs" />
     <Compile Include="Helpers\ApiInfo.cs" />
@@ -186,6 +185,7 @@
     <Compile Include="ViewModels\FavoritesVM.cs" />
     <Compile Include="ViewModels\GalleryListVM{T}.cs" />
     <Compile Include="Controls\TagAutoSuggestBox\ITagRecord.cs" />
+    <Compile Include="ViewModels\InfoVM.cs" />
     <Compile Include="ViewModels\PopularVM.cs" />
     <Compile Include="ViewModels\SavedVM.cs" />
     <Compile Include="ViewModels\GalleryVM.cs" />
