support uri query skip_mastertags
Former-commit-id: 0f50fc0c8f449a2a0737ad472bd8f6e16066f9ce [formerly f549edc4ac9fd9e701f3ee8537c15703c0919cbc]
Former-commit-id: 7c9415b2976880b65d2e2a587792eaaeaf515294

--- a/ExClient/ExClient.csproj
+++ b/ExClient/ExClient.csproj
@@ -142,6 +142,7 @@
     <Compile Include="Galleries\Rating\Score.cs" />
     <Compile Include="Hentaiverse\HentaiVerseInfo.cs" />
     <Compile Include="Hentaiverse\MonsterEncounteredEventArgs.cs" />
+    <Compile Include="Launch\SearchHandlerBase.cs" />
     <Compile Include="Migrations\20170612052132_NewMig.cs" />
     <Compile Include="Migrations\20170612052132_NewMig.designer.cs">
       <DependentUpon>20170612052132_NewMig.cs</DependentUpon>
