--- a/ApplicationDataManager/project.json
+++ b/ApplicationDataManager/project.json
@@ -2,8 +2,9 @@
   "dependencies": {
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.4.0",
     "Microsoft.Win32.Primitives": "4.3.0",
-    "Opportunity.MvvmUniverse": "0.4.7",
-    "Opportunity.ResourceGenerator": "1.1.7",
+    "Opportunity.Helpers.Universal": "1.1.3",
+    "Opportunity.MvvmUniverse": "1.0.0",
+    "Opportunity.ResourceGenerator": "1.2.0",
     "System.Diagnostics.Contracts": "4.3.0",
     "System.Net.NameResolution": "4.3.0",
     "System.Runtime.WindowsRuntime.UI.Xaml": "4.3.0",
