--- a/ExViewer/project.json
+++ b/ExViewer/project.json
@@ -8,13 +8,12 @@
     "Microsoft.EntityFrameworkCore.Sqlite": "1.1.2",
     "Microsoft.EntityFrameworkCore.Tools": "1.1.1",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.4.0",
+    "Microsoft.Toolkit.Uwp.Notifications": "2.0.0",
     "Microsoft.Toolkit.Uwp.UI.Controls": "2.0.0",
-    "Microsoft.Win32.Primitives": "4.3.0",
     "Opportunity.Converters": "2.0.3",
     "Opportunity.Helpers.Universal": "1.1.3",
     "Opportunity.MvvmUniverse": "1.0.0",
     "Opportunity.ResourceGenerator": "1.2.0",
-    "System.Diagnostics.Contracts": "4.3.0",
     "System.Net.NameResolution": "4.3.0",
     "System.Runtime.WindowsRuntime.UI.Xaml": "4.3.0",
     "System.Threading.Overlapped": "4.3.0",
