--- a/ExClient/ExClient.csproj
+++ b/ExClient/ExClient.csproj
@@ -142,6 +142,7 @@
     <Compile Include="Galleries\Rating\RatingStatus.cs" />
     <Compile Include="Galleries\Rating\Score.cs" />
     <Compile Include="Galleries\Renaming\RenameInfo.cs" />
+    <Compile Include="Galleries\Renaming\RenameRecord.cs" />
     <Compile Include="Hentaiverse\HentaiVerseInfo.cs" />
     <Compile Include="Hentaiverse\MonsterEncounteredEventArgs.cs" />
     <Compile Include="Launch\SearchHandlerBase.cs" />
