more url handler
Former-commit-id: e3d3bd265a580576eec34d163b2e67bcbaf7d2f6 [formerly a74ff3b287c8381c6b94f6e9612db67c0f228a75]
Former-commit-id: e2f202d7e0d42c5f8487ac7e5aa7ffb44d03f0d1

--- a/ExClient/ExClient.csproj
+++ b/ExClient/ExClient.csproj
@@ -181,7 +181,7 @@
     <Compile Include="Launch\FavoritesSearchHandler.cs" />
     <Compile Include="Launch\GalleryHandler.cs" />
     <Compile Include="Launch\GalleryImageHandler.cs" />
-    <Compile Include="Launch\GalleryTorrentHandler.cs" />
+    <Compile Include="Launch\GalleryPopupHandler.cs" />
     <Compile Include="Launch\LaunchResult.cs" />
     <Compile Include="Launch\SearchCategoryHandler.cs" />
     <Compile Include="Launch\SearchHandler.cs" />
