--- a/ExClient/ExClient.csproj
+++ b/ExClient/ExClient.csproj
@@ -193,6 +193,7 @@
     <Compile Include="Search\FileSearchResult.cs" />
     <Compile Include="Search\SearchResult.cs" />
     <Compile Include="Settings\ExcludedLanguage.cs" />
+    <Compile Include="Settings\ExcludedUploadersSettingProvider.cs" />
     <Compile Include="SHA1Value.cs" />
     <Compile Include="Tagging\GalleryTag.cs" />
     <Compile Include="Tagging\Namespace.cs" />
@@ -255,7 +256,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack">
-      <Version>1.6.8</Version>
+      <Version>1.6.10</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite">
       <Version>2.0.1</Version>
