per domain settings
Former-commit-id: 1d381a979ffba499eb59c2973dec0c5d498f9db6 [formerly c0bf45efe57fee5a27a5f5471c5ec0a5ffa83682]
Former-commit-id: 1487ba2043a32ccf83e1c8c3776aa599b5b9d7d2

--- a/ExClient/ExClient.csproj
+++ b/ExClient/ExClient.csproj
@@ -145,6 +145,7 @@
     <Compile Include="Galleries\Renaming\RenameRecord.cs" />
     <Compile Include="Hentaiverse\HentaiVerseInfo.cs" />
     <Compile Include="Hentaiverse\MonsterEncounteredEventArgs.cs" />
+    <Compile Include="Internal\DomainProvider.cs" />
     <Compile Include="Launch\SearchHandlerBase.cs" />
     <Compile Include="LogOnInfo.cs" />
     <Compile Include="Migrations\20170612052132_NewMig.cs" />
@@ -176,7 +177,6 @@
     <Compile Include="HostType.cs" />
     <Compile Include="Galleries\ImageLoadingState.cs" />
     <Compile Include="Internal\TokenExtension.cs" />
-    <Compile Include="Internal\UriProvider.cs" />
     <Compile Include="Galleries\Metadata\Language.cs" />
     <Compile Include="Launch\FavoritesSearchHandler.cs" />
     <Compile Include="Launch\GalleryHandler.cs" />
