--- a/ExViewer/ExViewer.csproj
+++ b/ExViewer/ExViewer.csproj
@@ -230,6 +230,7 @@
     <Compile Include="Helpers\ApiInfo.cs" />
     <Compile Include="Helpers\DocumentHelper.cs" />
     <Compile Include="Helpers\FavoriteExtension.cs" />
+    <Compile Include="Helpers\SearchResultExtension.cs" />
     <Compile Include="Helpers\GalleryExtension.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
@@ -320,7 +321,6 @@
     <Compile Include="Views\ImagePage.xaml.cs">
       <DependentUpon>ImagePage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\ImagePageCollectionView.cs" />
     <Compile Include="Views\RootController.cs" />
     <Compile Include="Views\LogOnDialog.xaml.cs">
       <DependentUpon>LogOnDialog.xaml</DependentUpon>
@@ -622,7 +622,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack">
-      <Version>1.7.0</Version>
+      <Version>1.7.1</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.AppCenter.Analytics">
       <Version>1.5.0</Version>
@@ -646,13 +646,13 @@
       <Version>2.2.0</Version>
     </PackageReference>
     <PackageReference Include="Opportunity.Converters">
-      <Version>2.2.1</Version>
+      <Version>2.2.3</Version>
     </PackageReference>
     <PackageReference Include="Opportunity.Helpers.Universal">
       <Version>1.3.1</Version>
     </PackageReference>
     <PackageReference Include="Opportunity.MvvmUniverse">
-      <Version>2.3.4</Version>
+      <Version>2.4.2</Version>
     </PackageReference>
     <PackageReference Include="Opportunity.ResourceGenerator">
       <Version>1.3.3</Version>
